assets/css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a,
a:visited,
a:link {
  color: inherit;
  text-decoration: none;
}

li {
  list-style: none;
  margin-right: 50px;
  font-size: 1.3rem;
}

/* Hamb Menu */

.humb-menu span {
  display: none;
  width: 38px;
  height: 5px;
  background-color: #fafafa;
  margin: 5px;
  border-radius: 0.25rem;
}

/* sm-device-menu */

.sm-device-menu {
  z-index: 999;
  position: fixed;
  width: 100%;
  height: 100vh;
  transform: translateX(-100%);
  transition: ease-in-out 300ms;
}

.sm-device-menu-clicked {
  background-color: #151515;
  transform: translateX(0);
}

/* FlexBox */

.flex {
  display: flex;
}
.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.flex-jc-c {
  justify-content: center;
}
.flex-ai-c {
  align-items: center;
}
.flex-dr-c {
  flex-direction: column;
}
.flex-jc-sb {
  justify-content: space-between;
}

body {
  text-align: center;
  font-family: Arial, sans-serif;
  color: #fafafa;
  background-color: #141414;
}

header {
  position: fixed;
  z-index: 9999;
  width: 100%;
  height: 150px;
  background-color: #141414;
  color: #fafafa;
  border: 0;
}

header-right {
  background-color: transparent;
}

.btn-book {
  /* background-color: #28a745; Dark background */
  background-color: hsl(31, 63%, 57%); /* Dark background */
  color: #fafafa; /* Light text */
  font-size: 1rem;
  font-weight: bold;
  padding: 15px;
  /* border: 2px solid #28a745; Green border to attract attention */
  border: 2px solid hsl(31, 63%, 57%); /* Green border to attract attention */

  border-radius: 0.35rem;
  cursor: pointer;
  transition: all 0.3s ease;
  display: inline-block;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

/* Hover effect */
.btn-book:hover {
  background-color: hsl(31, 63%, 57%); /* Green background */
  color: #fafafa;
  transform: scale(1.06);
  box-shadow: 0 6px 15px rgba(0, 3, 1, 0.283);
}

.container {
  width: 1200px;
  padding: 0 20px;
  background-color: transparent;
}

.logo-text {
  font-size: 1.8rem;
  letter-spacing: 0.08rem;
}

/* Nav */

nav li {
  font-weight: 500;
}

nav li:hover {
  color: #fafafa8e;
  transition: ease-in-out 200ms;
}

/* Banner Settings */

.banner {
  background-color: #242424;
  width: 100%;
  height: 100vh;
}

/* Font Family */

.anton-regular {
  font-family: "Anton", sans-serif;
  font-weight: 400;
  font-style: normal;
}
.fa-scissors {
  font-size: 2.8rem;
  margin-right: 15px;
}

/* Slides */

.overlay {
  position: absolute;
  width: 100%;
  height: inherit;
  background-color: rgba(0, 0, 0, 0.3);
  z-index: 1;
}

.overlay h2 {
  font-size: 4rem;
  max-width: 700px;
  text-align: left;
  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
  /* font-family: "Anton", sans-serif; */
  font-family: "Big Shoulders Inline", sans-serif;
  letter-spacing: 5.5px;
  color: #fafafa;
  margin-top: 140px;
  margin-bottom: 30px;
  text-transform: uppercase;
}

.overlay p {
  max-width: 700px;
  font-size: 1.4rem;
  color: #fafafac2;
  margin-bottom: 100px;
  text-align: left;
}

.overlay .us-flag {
  width: 60px;
}

.overlay .fa-earth-americas {
  color: #fafafa;
  transition: ease-in-out 200ms;
}

.overlay .fa-earth-americas:hover {
  color: #151515;
}

.slides {
  position: relative;
  z-index: 0;
  width: 100%;
  height: 100vh;
  background-image: url("./../images/bg3.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

/* Section Services */

.services {
  background-color: transparent;
}

.headers-container {
  margin: 100px 0;
  padding: 50px;
}

.headers-container h2,
.headers-container p {
  text-transform: uppercase;
}

.headers-container h2 {
  color: hsl(31, 63%, 57%);
  font-size: 1.2rem;
  font-weight: normal;
  margin-bottom: 10px;
}

.headers-container p {
  font-size: 1.5rem;
  font-weight: bold;
}

.bar {
  width: 40px;
  height: 2px;
  margin-top: 15px;
  background-color: hsl(31, 63%, 57%);
}

.service-item .fa-solid {
  font-size: 3.5rem;
  color: hsl(31, 63%, 57%);
}

/* .services-container {
  background-color: #28a745;
} */

.services-grid {
  background-color: transparent;
  display: grid;
  width: 100%;
  grid-template-columns: repeat(2, 1fr);
  gap: 30px;
  margin-bottom: 150px;
}

.service-item {
  background-color: #121212;
  border-radius: 8px;
  border-radius: 5px;
  overflow: hidden;
  position: relative;
  padding: 50px;
}

.service-item h2 {
  margin-top: 20px;
  text-transform: uppercase;
  font-size: 1.2rem;
}

.service-item p {
  margin-top: 40px;
  font-size: 1.2rem;
}

.service-item:hover {
  opacity: 0.8;
  transition: ease-in-out 0.2s;
}

/* Section Clients */

/* .clients {
  background-color: red;
} */

/* Section About Us */

.about-us {
  height: 1300px;
}

/* Section BG */

.bg-section-1 {
  width: 100%;
  height: 600px !important;
}

.bg-section-1-container {
  text-transform: uppercase;
  /* color: #121212; */
  border-radius: 0.3rem;
  width: 300px;
  padding: 50px;
  /* background-color: #fafafa10; */
}

/* General Configuration */

.section {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed; /* This allows scrolling */
}

.bg1 {
  background-image: url("./../images/bg1.jpg");
}

/* Initial state (hidden) */
.fade-in {
  opacity: 0;
  transform: translateX(100px); /* Start off-screen */
  transition: opacity 1s ease-out, transform 1s ease-out;
}

/* Left side effect */
.fade-in.left {
  transform: translateX(-100px);
}

/* Active state (appears when scrolled into view) */
.fade-in.visible {
  opacity: 1;
  transform: translateX(0);
}

/* Hide the element when the screen width is below 560px */

@media (max-width: 560px) {
  .services-grid {
    grid-template-columns: repeat(1, 1fr);
  }
}

@media screen and (max-width: 900px) {
  .logo-text,
  .header-right nav,
  .btn-book {
    display: none;
  }

  .sm-device-menu .btn-book {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .sm-device-menu nav li {
    margin-right: 0;
    margin-bottom: 60px;
  }

  .humb-menu span {
    display: block;
  }

  .fa-scissors {
    font-size: 3rem;
  }

  .overlay {
    padding: 0 20px;
  }
}

@media screen and (max-width: 500px) {
  .overlay h2 {
    font-size: 2.6rem;
  }

  .overlay p {
    font-size: 1.2rem;
  }
}

